feat: reabse community PR and fixes